--- a/Project/bookshelf/style.css
+++ b/Project/bookshelf/style.css
@@ -104,7 +104,7 @@ main {
     padding: 16px;
     width: 100%;
     display: grid;
-    grid-template-columns: auto 1fr 0.5fr;
+    grid-template-columns: auto 1fr;
     grid-gap: 10px;
 }
 
@@ -168,4 +168,8 @@ main {
 .book_shelf > .book_list > .book_item > .action > .red {
     background-color: darkred;
     color: white;
+}
+
+.found {
+    background-color: yellow;
 }
