--- a/Project/bookshelf/style.css
+++ b/Project/bookshelf/style.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 body {
@@ -17,7 +19,7 @@ body {
 .page-title {
   margin: 20px auto;
   padding: 12px;
-  width: 30%;
+  width: 20em;
   display: grid;
   grid-template-columns: 1fr auto 1fr;
   grid-gap: 10px;
@@ -63,10 +65,9 @@ main {
   border: 0;
   border-radius: 10px;
   display: block;
-  width: 18%;
+  width: 8em;
   padding: 8px;
   cursor: pointer;
-
 }
 
 .input-section form button {
